Add license and update readme

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "svelte-app",
+  "name": "yahtzee-svelte",
+  "license": "BlueOak-1.0.0",
   "version": "1.0.0",
   "scripts": {
     "build": "rollup -c",
